--- a/IFE-js03.html
+++ b/IFE-js03.html
@@ -62,11 +62,29 @@ function getData() {
  * 返回一个排序后的数组
  */
 function sortAqiData(data) {
-	 return data.sort((prev,next)=>{
-		if(prev>=next){
+	 /*return data.sort((prev,next)=>{
+		if(prev<next){
+			return 1;
+		}else if (prev == next){
+			return 0;
+		}else{
 			return -1;
-		}else{return 1;}
-	})
+		}
+	})*/
+	function compare(arr1,arr2) {
+      var aqi1 = arr1[1];
+      var aqi2 = arr2[1];
+      if (aqi1 < aqi2) {
+        return 1;
+      }else if (aqi1 == aqi2) {
+        return 0;
+      }else {
+        return -1;
+      }
+    }
+	 data.sort(compare);
+      return data; 
+ 
 }
 
 /**
@@ -78,7 +96,8 @@ function render(data) {
 	const list=document.getElementById("resort");
 	data.forEach((item, index) => {
     var li = document.createElement('li');
-    li.innerHTML = `第${index + 1}名：${item[0]}，${item[1]}`;
+	var num = ['一', '二', '三', '四', '五', '六', '七'];
+    li.innerHTML = `第${num[index]}名：${item[0]}，${item[1]}`;
     list.appendChild(li);
   });
 }
@@ -94,7 +113,6 @@ function init() {
 	var btn = document.querySelector("#sort-btn");
 	btn.onclick = btnHandle();
 }
-
 </script>
 </body>
 </html>
